WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
268536
Deadlock under ~PluginView() with PDFPlugin
https://bugs.webkit.org/show_bug.cgi?id=268536
Summary
Deadlock under ~PluginView() with PDFPlugin
Erica Li
Reported
2024-02-01 01:50:59 PST
rdar://108489643
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2024-02-02 07:31:57 PST
Committed
273988@main
(89a06fec3aed): <
https://commits.webkit.org/273988@main
> Reviewed commits have been landed. Closing PR #23656 and removing active labels.
WebKit Commit Bot
Comment 2
2024-02-09 16:31:05 PST
Re-opened since this is blocked by
bug 269115
Tim Horton
Comment 3
2024-02-14 16:24:23 PST
***
Bug 269355
has been marked as a duplicate of this bug. ***
EWS
Comment 4
2024-02-14 20:16:50 PST
Committed
274694@main
(7175cd9a22b4): <
https://commits.webkit.org/274694@main
> Reviewed commits have been landed. Closing PR #24209 and removing active labels.
WebKit Commit Bot
Comment 5
2024-02-15 09:35:09 PST
Re-opened since this is blocked by
bug 269472
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug